<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="dev">- developed by ihd.yo -</string>

    <string name="app_name" translatable="false">Lumos</string>
    <string name="app_version">Version</string>
    <string name="app_tagline" translatable="false">Lux ex te, pro orbis</string>
    <string name="app_tagline_translated">lights from you, for the world</string>

    <string name="item_default">Default</string>
    <string name="item_theme">Theme</string>
    <string name="item_theme_dark">Dark</string>
    <string name="item_theme_light">Light</string>
    <string name="item_language">Languages</string>
    <string name="item_language_english">English</string>
    <string name="item_language_indonesia">Bahasa Indonesia</string>
    <string name="item_language_javanese">Javanese</string>

    <string name="menu">Menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_campaign" translatable="false">Greenify</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>

    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_old_email">Current email</string>
    <string name="hint_new_email">New email</string>
    <string name="hint_retype_email">Retype new email</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Current password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_retype_password">Retype new password</string>
    <string name="hint_new_username">New username</string>

    <string name="text_placeholder">-</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_welcome_description">Please sign in to your registered account to connect with your smart lamp systems</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_choice">or</string>
    <string name="text_unregistered_user">Didn\'t have our product yet?</string>
    <string name="text_order_here">Order here!</string>
    <string name="text_greeting_morning">Good Morning,</string>
    <string name="text_greeting_afternoon">Good Afternoon,</string>
    <string name="text_greeting_evening">Good Evening,</string>
    <string name="text_greeting_night">Good Night,</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_automatic">A</string>
    <string name="text_manual">M</string>
    <string name="text_power_unit">kWh</string>
    <string name="text_read_more">Read More</string>
    <string name="text_schedule_title_start">Select start time</string>
    <string name="text_schedule_title_finish">Select finish time</string>
    <string name="text_email_verification">Send Email Verification</string>
    <string name="text_change_email">Change Email</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_change_username">Change Username</string>
    <string name="text_select_room">select room</string>
    <string name="text_select_lamp">select lamp</string>
    <string name="text_power_consumption">Power Consumption</string>
    <string name="text_power_consumption_month">This Month</string>
    <string name="text_power_consumption_average">Average</string>
    <string name="text_power_consumption_average_very_low">Very Low</string>
    <string name="text_power_consumption_average_low">Low</string>
    <string name="text_power_consumption_average_moderate">Moderate</string>
    <string name="text_power_consumption_average_high">High</string>
    <string name="text_power_consumption_average_very_high">Very High</string>
    <string name="text_power_consumption_category">Category</string>
    <string name="text_settings_notification">Notification</string>
    <string name="text_settings_application">Application</string>
    <string name="text_settings_profile">Profile</string>
    <string name="text_settings_push_notification">Push Notification</string>
    <string name="text_settings_subscribe_newsletter">Subscribe Newsletter</string>
    <string name="text_settings_dynamic_color">Dynamic Color</string>
    <string name="text_settings_themes">Themes</string>
    <string name="text_settings_languages">Languages</string>
    <string name="text_problem">Catch a problem?</string>
    <string name="text_customer_service">Call our customer service</string>
    <string name="text_about_our_team">Our Team</string>
    <string name="text_about_lumos">About Lumos</string>
    <string name="text_about_lumos_description">Lumos, a prototype concept apps brainstormed by Group 6 and ihd.yo as the developer, blends technology and creativity, addressing diverse needs in response to a college assignment. Not just an app, Lumos is a one-stop solution showcasing innovation while prioritizing environmental care through smart lamp design.</string>
    <string name="text_about_subject" translatable="false">Pengembangan Aplikasi Piranti Bergerak</string>
    <string name="text_about_lecturer" translatable="false">Ir. Yoga Sahria, S.Kom.,M.Kom.</string>
    <string name="text_about_class">Classroom D  </string>
    <string name="text_about_major">Informatics UTY</string>
    <string name="text_greenify_description">Greenify reflects our unwavering commitment to green living and active advocacy for environmental sustainability through ongoing participation in green campaigns, showcasing our dedication to the planet\'s well-being.</string>
    <string name="text_tutorial_how_to_start">How To Start?</string>
    <string name="text_tutorial_select_room">1. Select Room</string>
    <string name="text_tutorial_select_room_description">On the given list of room icon, select your desired rooms.</string>
    <string name="text_tutorial_select_lamp">2. Select Lamp</string>
    <string name="text_tutorial_select_lamp_description">On the given list of lamp icon, select your desired lamps.</string>
    <string name="text_tutorial_properties">Properties</string>
    <string name="text_tutorial_properties_lamp_mode">Lamp Mode</string>
    <string name="text_tutorial_properties_lamp_mode_description">There are 3 lamp modes: Automatic, Scheduled, and Manual.</string>
    <string name="text_tutorial_properties_switch_power">Switch Power</string>
    <string name="text_tutorial_properties_switch_power_description">Lamps would allow you to control their state manually.</string>
    <string name="text_tutorial_properties_schedule_input">Schedule Input</string>
    <string name="text_tutorial_properties_schedule_input_description">Access to control lamp state when the selected mode is scheduled.</string>
    <string name="text_tutorial_properties_brightness_slider">Brightness Slider</string>
    <string name="text_tutorial_properties_brightness_slider_description">For your comfort, lamps enable you to adjust their brightness.</string>
    <string name="text_upcoming_feature">This feature is under construction!</string>

    <string name="prompt_ok" translatable="false">OK</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="prompt_no">No</string>
    <string name="prompt_yes">Yes</string>
    <string name="prompt_retry">Retry</string>
    <string name="prompt_close">Close</string>
    <string name="prompt_register">Register</string>
    <string name="prompt_next">Next</string>
    <string name="prompt_send">Send</string>
    <string name="prompt_restart">Restart</string>
    <string name="prompt_quit">Quit</string>
    <string name="prompt_connection_no">No connection</string>
    <string name="prompt_connection_check">Please re-check your internet connection</string>
    <string name="prompt_connection_restart">Restart</string>
    <string name="prompt_connection_connect">Connect</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_login_with_google">Login with Google</string>
    <string name="prompt_logout">Log Out</string>
    <string name="prompt_logout_check">Are you sure want to log out?</string>
    <string name="prompt_password_incorrect">Your password is incorrect</string>
    <string name="prompt_reset_password_check">Reset password code sent into</string>
    <string name="prompt_change_username_success">Your username changed successfully</string>
    <string name="prompt_change_username_failed">Failed while changing your username</string>
    <string name="prompt_change_email">Change Email</string>
    <string name="prompt_change_email_verify">Please verify your new email</string>
    <string name="prompt_change_email_success">Your email changed successfully</string>
    <string name="prompt_change_email_failed">Failed while changing your email</string>
    <string name="prompt_change_password">Change Password</string>
    <string name="prompt_change_password_check">Are you sure want to change your password?</string>
    <string name="prompt_change_password_not_match">Your password is incorrect</string>
    <string name="prompt_change_password_new_not_match">Your password is not match!</string>
    <string name="prompt_change_password_success">Your password changed successfully</string>
    <string name="prompt_change_password_failed">Failed while changing your password</string>
    <string name="prompt_auth_success">Successfully signed in</string>
    <string name="prompt_auth_failed">Failed to signing in</string>
    <string name="prompt_auth_failed_check">This user credential are not registered!</string>
    <string name="prompt_auth_email_failed">Failed signing in with email, recheck your email and password</string>
    <string name="prompt_auth_google_failed">Failed signing in with Google</string>
    <string name="prompt_invalid_email">Invalid email format</string>
    <string name="prompt_empty_email">Email cannot be empty</string>
    <string name="prompt_empty_password">Password cannot be empty</string>
    <string name="prompt_email_verification_sending">Sending verification code</string>
    <string name="prompt_qr_scanner_error">QR Scanner Error</string>
    <string name="prompt_qr_scanner_error_check">Delete Google Play Services data and cache, then reopen the apps</string>
    <string name="prompt_dynamic_color_success">Changes will applied after restart</string>
    <string name="prompt_dynamic_color_failed">Your device does not supported dynamic color</string>
    <string name="prompt_social_link">Open Another Apps</string>
    <string name="prompt_social_link_check">Are you sure want to open another apps?</string>
    <string name="prompt_social_link">Open Another Apps</string>

    <string name="placeholder_email" translatable="false">Email</string>
    <string name="placeholder_username">User</string>
    <string name="placeholder_greeting">Hello,</string>
    <string name="placeholder_city">City</string>
    <string name="placeholder_room">Room</string>
    <string name="placeholder_room_floor" translatable="false">0F</string>
    <string name="placeholder_schedule" translatable="false">00:00</string>
</resources>