<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ihdyo.smarthome.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tutorial"
        android:name="com.ihdyo.smarthome.ui.tutorial.TutorialFragment"
        android:label="@string/menu_tutorial"
        tools:layout="@layout/fragment_tutorial" />

    <fragment
        android:id="@+id/nav_campaign"
        android:name="com.ihdyo.smarthome.ui.campaign.CampaignFragment"
        android:label="@string/menu_campaign"
        tools:layout="@layout/fragment_campaign" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.ihdyo.smarthome.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ihdyo.smarthome.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>