<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/image_decoration"
        android:layout_width="@dimen/sp_11xl"
        android:layout_height="@dimen/sp_11xl"
        android:layout_marginEnd="-96dp"
        android:elevation="-1dp"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/img_house_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/text_room_decoration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/juliette_regular"
        android:text="@string/app_tagline"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/image_decoration"
        app:layout_constraintStart_toStartOf="@+id/image_app_icon"
        app:layout_constraintTop_toTopOf="@+id/image_decoration" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_app_icon"
        android:layout_width="@dimen/sp_4xl"
        android:layout_height="@dimen/sp_4xl"
        android:layout_marginTop="@dimen/sp_xl"
        android:layout_marginStart="@dimen/sp_xl"
        android:background="?attr/colorSurfaceContainerLow"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/app_icon"
        app:shapeAppearanceOverlay="@style/ImageViewSquircle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_app_name"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/sp_sm"
        android:layout_marginBottom="@dimen/sp_2xs"
        android:textColor="?attr/colorPrimary"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/image_app_icon"
        app:layout_constraintStart_toEndOf="@+id/image_app_icon"
        app:layout_constraintTop_toTopOf="@+id/image_app_icon" />

    <TextView
        android:id="@+id/text_welcome"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sp_2xs"
        android:text="@string/text_welcome"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/text_login_description"
        app:layout_constraintStart_toStartOf="@+id/text_login_description" />

    <TextView
        android:id="@+id/text_login_description"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="@dimen/sp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sp_xl"
        android:layout_marginBottom="@dimen/sp_xl"
        android:text="@string/text_welcome_description"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sp_2xs"
        android:layout_marginHorizontal="@dimen/sp_xl"
        android:hint="@string/hint_email"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/text_password"
        app:layout_constraintEnd_toEndOf="@+id/text_login_description"
        app:layout_constraintStart_toStartOf="@+id/text_login_description"
        app:startIconDrawable="@drawable/bx_at">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sp_xl"
        android:layout_marginBottom="@dimen/sp_4xl"
        android:hint="@string/hint_password"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="@+id/text_email"
        app:layout_constraintStart_toStartOf="@+id/text_email"
        app:startIconDrawable="@drawable/bx_lock_alt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_forgot_password"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/text_forgot_password"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/text_password"
        app:layout_constraintTop_toBottomOf="@+id/text_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="@dimen/sp_0"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sp_xl"
        android:layout_marginBottom="@dimen/sp_xl"
        android:text="@string/prompt_login"
        android:textAlignment="textStart"
        app:icon="@drawable/bx_log_in_circle"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@+id/text_or"
        app:layout_constraintEnd_toStartOf="@+id/button_scan"
        app:layout_constraintStart_toStartOf="@+id/text_password" />

    <Button
        android:id="@+id/button_scan"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="@dimen/sp_4xl"
        android:layout_height="@dimen/sp_4xl"
        android:layout_marginBottom="@dimen/sp_sm"
        android:paddingEnd="@dimen/sp_lg"
        app:icon="@drawable/bx_qr_scan"
        app:iconGravity="textStart"
        app:strokeColor="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/text_unregistered"
        app:layout_constraintEnd_toEndOf="@+id/text_password"
        app:layout_constraintTop_toTopOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_left"
        android:layout_width="@dimen/sp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sp_sm"
        app:layout_constraintBottom_toBottomOf="@+id/text_or"
        app:layout_constraintEnd_toStartOf="@+id/text_or"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toTopOf="@+id/text_or" />

    <TextView
        android:id="@+id/text_or"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sp_xl"
        android:alpha="0.5"
        android:text="@string/text_choice"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_right"
        android:layout_width="@dimen/sp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sp_sm"
        app:layout_constraintBottom_toBottomOf="@+id/text_or"
        app:layout_constraintEnd_toEndOf="@+id/button_scan"
        app:layout_constraintStart_toEndOf="@+id/text_or"
        app:layout_constraintTop_toTopOf="@+id/text_or" />

    <Button
        android:id="@+id/button_google"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimary"
        android:layout_marginHorizontal="@dimen/sp_xl"
        android:layout_marginBottom="@dimen/sp_md"
        android:text="@string/prompt_login_with_google"
        android:textAlignment="textStart"
        app:icon="@drawable/bxl_google"
        app:iconTint="?attr/colorPrimary"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@+id/text_unregistered"
        app:layout_constraintEnd_toEndOf="@+id/button_scan"
        app:layout_constraintStart_toStartOf="@+id/button_login" />

    <TextView
        android:id="@+id/text_unregistered"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sp_xl"
        android:text="@string/text_unregistered_user"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_register"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sp_3xs"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/text_order_here"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/text_unregistered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_unregistered"
        app:layout_constraintTop_toTopOf="@+id/text_unregistered" />

</androidx.constraintlayout.widget.ConstraintLayout>