<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_squircle_dialog"
    style="@style/Animation.Design.BottomSheetDialog"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_title"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_2xl"
        android:layout_marginStart="@dimen/sp_xl"
        android:text="@string/text_change_password"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sp_xl"
        android:layout_marginTop="@dimen/sp_xl"
        android:hint="@string/hint_new_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/button_proccess"
        app:layout_constraintStart_toStartOf="@+id/button_proccess"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:startIconDrawable="@drawable/bx_lock_alt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sp_xl"
        android:layout_marginTop="@dimen/sp_xl"
        android:hint="@string/hint_retype_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/text_first"
        app:layout_constraintStart_toStartOf="@+id/text_first"
        app:layout_constraintTop_toBottomOf="@+id/text_first"
        app:startIconDrawable="@drawable/bx_lock_alt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_proccess"
        android:layout_width="@dimen/sp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_xl"
        android:text="@string/prompt_change_password"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_second" />

</androidx.constraintlayout.widget.ConstraintLayout>