<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.carousel.MaskableFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carousel_item_container"
    android:layout_width="@dimen/sp_10xl"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/sp_2xs"
    android:foreground="?attr/selectableItemBackground"
    app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_team"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="-2dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp_9xl"
            android:background="@drawable/shape_gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/role_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_md"
            android:layout_marginEnd="@dimen/sp_lg"
            android:backgroundTint="?attr/colorSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="@dimen/sp_0">

            <TextView
                android:id="@+id/text_team_role"
                style="@style/TextAppearance.Material3.LabelSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/sp_sm"
                android:layout_marginVertical="@dimen/sp_xs"
                android:text="@string/text_placeholder"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorOnSurface"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_team_name"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSurface"
            android:textStyle="bold"
            android:text="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/text_team_number"
            app:layout_constraintStart_toStartOf="@+id/text_team_number" />

        <TextView
            android:id="@+id/text_team_number"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSurface"
            android:layout_marginBottom="@dimen/sp_lg"
            android:layout_marginStart="@dimen/sp_lg"
            android:text="@string/app_tagline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.carousel.MaskableFrameLayout>